redo whole frontend

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,7 @@
 .jumbotron{
+    margin-top: -5%;
     padding-top: 10%;
-    padding-bottom: 15%;
+    padding-bottom: 20%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     border:none;
     
@@ -22,7 +23,7 @@
     opacity: 0.6;
     background: #1e1e1e;
     margin-top: 5px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    
     border-radius: 2rem;
     font-weight: 600;
 }
