--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,22 +46,23 @@
         <div class="card-body">
           <div class="container">
   
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <input type="text" placeholder="Username" class="form-control"
+            name="username" required>
   
-            <input type="password" placeholder="Enter Password" name="pwd" required>
+            <input type="password" placeholder="Password" class="form-control"
+            name="password" required>
   
   
             <label>
-              <input type="checkbox" checked="checked" name="remember"> Remember me
+              <input type="checkbox" checked name="remember"> Remember me
             </label>
           </div>
         </div>
         <div class="card-footer">
-          <div class="form-inline">
+          <div class="form-group">
             <input type="button" class="btn btn-success" value="Log In"
               onclick="document.getElementById('logInPopup').style.display='none'">
-            <input type="button" onclick="document.getElementById('logInPopup').style.display='none'"
-              class="btn btn-danger" value="Cancel" >
+            
             <span class="pwd" style="color: #f1f1f1">Forgot password? Click <a href="#" id="pwdHelp">here</a></span>
           </div>
         </div>
