--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -45,6 +45,10 @@
         </div>
         <div class="card-body">
           <div class="container">
+            <select class="form-control">
+              <option value="trainer">Trainer</option>
+              <option value="learner">Learner</option>
+            </select>
   
             <input type="text" placeholder="Username" class="form-control"
             name="username" required>
