--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -32,18 +32,20 @@ label{
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], select {
   width: 100%;
   padding: 8px 10px;
   margin: 8px 0;
-  display: inline-block;
-background: transparentize($color: #000000, $amount: 0.6);
-  border-bottom: 10px red !important;
   
+background: transparentize($color: #000000, $amount: 0.6);
+border: none;
+
+  color: white;
   border-radius: 5px;
 }
 input:focus, input:hover{
-  box-shadow: 0 0 5px #1b9fc6;
+  box-shadow: 0 0 5px white;
+  background: transparentize($color: #000000, $amount: 0.8);
 }
 
 .container {
@@ -66,7 +68,7 @@ span.pwd {
   width: 100%;
   height: fit-content; 
   overflow: auto; /* Enable scroll if needed */
- 
+ background-color:rgba(0,0,0,0.6);
   background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
   
  
